--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.60'
+    ext{
+        kotlin_version = '1.3.60'
+        coroutinesVersion = '1.2.1'
+        nav_version = "2.1.0"
+    }
     repositories {
         google()
         jcenter()
@@ -10,6 +15,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-rc01"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
