--- a/data/build.gradle
+++ b/data/build.gradle
@@ -20,7 +20,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "BASE_URL", "\"api.openweathermap.org/data/2.5/\"")
+            buildConfigField("String", "BASE_URL", "api.openweathermap.org/data/2.5/")
+        }
+        debug{
+            buildConfigField("String", "BASE_URL", "api.openweathermap.org/data/2.5/")
         }
     }
 
