Added metric units

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,9 +21,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField("String", "BASE_URL", "\"https://api.openweathermap.org/data/2.5/\"")
+            buildConfigField("String", "API_KEY", "\"910f5ea26bec82460f30f8f815923218\"")
         }
         debug{
             buildConfigField("String", "BASE_URL", "\"https://api.openweathermap.org/data/2.5/\"")
+            buildConfigField("String", "API_KEY", "\"910f5ea26bec82460f30f8f815923218\"")
         }
     }
 
